--- a/moregames.html
+++ b/moregames.html
@@ -7,7 +7,7 @@
 <body>
 <header>
         <nav>
-          <a href="https://lapracticafinal.w3spaces.com/index.html">
+          <a href="index.html">
           <img src="https://cdn.pixabay.com/photo/2023/01/02/20/49/controller-7692999_640.png" alt="Game logo" width="50px">
           </a>
             <a href="pages/More-Games.html"><strong>MORE GAMES</strong></a>
