--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <img src="https://cdn.pixabay.com/photo/2023/01/02/20/49/controller-7692999_640.png" alt="Game logo" width="50px">
           </a>
             <a href="./moregames.html"><strong>MORE GAMES</strong></a>
-            <a href="pages/pixel.html"><strong>PIXEL GAMES</strong></a>
+            <a href="./pixel.html"><strong>PIXEL GAMES</strong></a>
             <a href="./updates.html"><strong>UPDATES</strong></a>
         </nav>
         <nav>
