--- a/updates.html
+++ b/updates.html
@@ -10,8 +10,8 @@
           <a href="./index.html">
           <img src="https://cdn.pixabay.com/photo/2023/01/02/20/49/controller-7692999_640.png" alt="Game logo" width="50px">
           </a>
-            <a href="pages/More-Games.html"><strong>___MORE GAMES</strong></a>
-            <a href="pages/pixel.html"><strong>___PIXEL GAMES</strong></a>
+            <a href="./moregames.html"><strong>___MORE GAMES</strong></a>
+            <a href="./pixel.html"><strong>___PIXEL GAMES</strong></a>
             <a href="./updates.html"><strong>___UPDATES</strong></a>
         </nav>
         <nav>
