--- a/pixel.html
+++ b/pixel.html
@@ -32,8 +32,8 @@
     <div class="grid">
         <div class="grid-item">
 			<a href="./executables/3d.html">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSadq2tR_lIu4zTe7DZx3lqTRc3RQSkZxxcKQ&usqp=CAU" alt="3D Bowling" width="200"  height="200">
-            <h2>3D Bowling</h2>
+			        <img src="https://m.media-amazon.com/images/I/71Rvyj1gI1L.png" alt="drift-boss" width="200" height="200">
+            <h2>Drift Boss</h2>
             			</a>
         </div>
 
