--- a/pixel.html
+++ b/pixel.html
@@ -31,7 +31,7 @@
 
     <div class="grid">
         <div class="grid-item">
-			<a href="./executables/3d.html">
+			<a href="./executables/drift-boss.html">
 			        <img src="https://m.media-amazon.com/images/I/71Rvyj1gI1L.png" alt="drift-boss" width="200" height="200">
             <h2>Drift Boss</h2>
             			</a>
