--- a/pixel.html
+++ b/pixel.html
@@ -39,8 +39,8 @@
 
         <div class="grid-item">
 			<a href="./executables/bottle.html">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSK5a9cN6HMlrXMbeQ92Qpr1LtqqI65juuQFg&usqp=CAU" alt="Bottle" width="200"  height="200">
-            <h2>Bottle Flip</h2>
+		<img src="https://cdn-icon.bluestacks.com/-BT8C-1UPYWouyjVvWYgaar_-xV4IQvX4Bvib3koGEGiy6UsHlt0RgYpUrdTDfC2y0ct" alt="retro bowl" width="200" height="200">
+            <h2>Retro Bowl</h2>
 			</a>
         </div>
 		        <div class="grid-item">
