--- a/pixel.html
+++ b/pixel.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="grid-item">
-			<a href="./executables/bottle.html">
+			<a href="./executables/retro.html">
 		<img src="https://cdn-icon.bluestacks.com/-BT8C-1UPYWouyjVvWYgaar_-xV4IQvX4Bvib3koGEGiy6UsHlt0RgYpUrdTDfC2y0ct" alt="retro bowl" width="200" height="200">
             <h2>Retro Bowl</h2>
 			</a>
