--- a/executables/drift-boss.html
+++ b/executables/drift-boss.html
@@ -3,6 +3,14 @@
 <head>
   <title>Drift Boss</title>
     <link rel="stylesheet" href="styledrift.css">
+  <style>
+    body {
+      background-color:black;
+    }
+    section {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
      <section id="gameSection">
