--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="grid-item">
 			<a href="./executables/bitlife/index-1.html">
-			<img src="https://mipruebafinal-8623086.codehs.me/images/bitlife.jpg" alt="Bitlife" width="200"  height="200">
+			<img src="https://d.newsweek.com/en/full/1317374/bitlife-ribbons-how-get-all-complete-list-android-ios-cheats-guide-tips-become.jpg?w=1600&h=1600&q=88&f=75befc746fb83a0c568c44ca07bc5e64" alt="Bitlife" width="200"  height="200">
             <h2>Bitlife</h2>
 			</a>
         </div>
