--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="grid-item">
-			<a href="./executables/Tetris/Tetris.html">
+			<a href="https://www.lumpty.com/amusements/Games/Tetrominoes/tetrominoes.html">
 			<img src="https://codehs.com/uploads/95478efdf2a4177a020bf78b242aecd5" alt="Tetris" width="200"  height="200">
             <h2>Tetris</h2>
 			</a>
