--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
         <div class="grid-item">
-			<a href="https://www.lumpty.com/amusements/Games/Tetrominoes/tetrominoes.html">
+			<a href="./executables/pko.html">
 			<img src="https://img.poki.com/cdn-cgi/image/quality=78,width=600,height=600,fit=cover,f=auto/0770daaa8c4ff3c36dd53e6e41f59396.png" alt="PKO" width="200"  height="200">
             <h2>Penalty Kick Online</h2>
 			</a>
