--- a/moregames.html
+++ b/moregames.html
@@ -59,7 +59,7 @@
 
 <div class="grid-item">
 			<a href="./executables/run.html">
-			<img src="https://img.poki.com/cdn-cgi/image/quality=78,width=314,height=314,fit=cover,f=auto/d3c19e9b-9b7b-4a54-9cb5-6188a5bd7d3b.png" alt="Run 3" width="200"  height="200">
+			<img src="./images/run-3.jpg" alt="Run 3" width="200"  height="200">
             <h2>Run 3 </h2>
 			</a>
         </div>
