--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
 
         <div class="grid-item">
-			<a href="./executables/pko.html">
-			<img src="./images/pko" alt="PKO" width="200"  height="200">
+			<a href="https://penalty-kick-online.github.io">
+			<img src="./images/pko.jpg" alt="PKO" width="200"  height="200">
             <h2>Penalty Kick Online</h2>
 			</a>
         </div>
