--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
         <div class="grid-item">
-			<a href="https://penalty-kick-online.github.io">
+			<a href="./executables/prrro.html">
 			<img src="./images/pko.jpg" alt="PKO" width="200"  height="200">
             <h2>Penalty Kick Online</h2>
 			</a>
