--- a/executables/sans-fight.html
+++ b/executables/sans-fight.html
@@ -1,1 +1,18 @@
-
+ <!DOCTYPE html> 
+<html> 
+  
+<head> 
+    <title>Sans Fight</title> 
+</head> 
+<frameset rows="100%,*"> 
+    <frame src= 
+"https://jcw87.github.io/c2-sans-fight/"> 
+        <noframes> 
+  
+            <body> 
+  
+            </body> 
+        </noframes> 
+</frameset> 
+  
+</html>
