--- a/pixel.html
+++ b/pixel.html
@@ -43,6 +43,13 @@
             <h2>Retro Bowl</h2>
 			</a>
         </div>
+	    
+        <div class="grid-item">
+			<a href="./executables/sans-fight.html">
+		<img src="https://assetsio.reedpopcdn.com/undertale-review-1503040409667.jpg?width=1200&height=900&fit=crop&quality=100&format=png&enable=upscale&auto=webp" alt="sans" width="200" height="200">
+            <h2>Sans Fight</h2>
+			</a>
+        </div>
     </div>
 </div>
 
