--- a/updates.html
+++ b/updates.html
@@ -29,9 +29,7 @@
         <h1>Here you can fInd updates that i've made to the website</h1>
 <p> As of this week, here is what has been changed:</p>
 <ul>
-    <li>New webpage and website layout</li>
- <li>Slope finally works :)</li>
-  <li>Penalty Kick Online is fully functional now :)</li>
+    <li>New game: Snans fight</li>
 </ul>
 <p> If you want me to add a game or a game doesn't seem to work for any reason (for example the game is blocked), pls submit the problem or game on the following form:</p>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdYdBzR_2Uviodp6t4J-Wh6w0av1xEM-F6IYjRBO8qbYoHm3g/viewform?vc=0&c=0&w=1&flr=0">
