--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
             <h2>Penalty Kick Online</h2>
 			</a>
         </div>
+
+	            <div class="grid-item">
+			<a href="./executables/goi.html">
+			<img src="./images/pko.jpg" alt="PKO" width="200"  height="200">
+            <h2>Getting Over It (Scratch)</h2>
+			</a>
+        </div>
     </div>
 </div>
 
