--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 	            <div class="grid-item">
 			<a href="./executables/goi.html">
-			<img src="./images/pko.jpg" alt="PKO" width="200"  height="200">
+			<img src="./images/getting-over-it.png" alt="GOI" width="200"  height="200">
             <h2>Getting Over It (Scratch)</h2>
 			</a>
         </div>
