--- a/pixel.html
+++ b/pixel.html
@@ -43,6 +43,13 @@
             <h2>Retro Bowl</h2>
 			</a>
         </div>
+
+	            <div class="grid-item">
+			<a href="./executables/retro2.html">
+		<img src="./images/" alt="retro bowl college" width="200" height="200">
+            <h2>Retro Bowl College</h2>
+			</a>
+        </div>
 	    
         <div class="grid-item">
 			<a href="./executables/sans-fight.html">
