--- a/pixel.html
+++ b/pixel.html
@@ -46,7 +46,7 @@
 
 	            <div class="grid-item">
 			<a href="./executables/retro2.html">
-		<img src="./images/" alt="retro bowl college" width="200" height="200">
+		<img src="./images/retro-bowl-college.png" alt="retro bowl college" width="200" height="200">
             <h2>Retro Bowl College</h2>
 			</a>
         </div>
