--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,7 @@
 <ul>
     <li>New game: Sans fight</li>
  <li>New game: Getting Over It (Scratch)</li>
+ <li>New game: Retro Bowl College</li>
 </ul>
 <p> If you want me to add a game or a game doesn't seem to work for any reason (for example the game is blocked), pls submit the problem or game on the following form:</p>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdYdBzR_2Uviodp6t4J-Wh6w0av1xEM-F6IYjRBO8qbYoHm3g/viewform?vc=0&c=0&w=1&flr=0">
