--- a/moregames.html
+++ b/moregames.html
@@ -65,6 +65,12 @@
         </div>
     </div>
 </div>
+	        <div class="grid-item">
+			<a href="./executables/DuckLife4/index.html">
+			<img src="https://i.ytimg.com/vi/sMQp7D8vTks/maxresdefault.jpg" alt="DL4" width="200"  height="200">
+            <h2>Duck Life 4</h2>
+			</a>
+        </div>
 
 </body>
 </html>
