--- a/moregames.html
+++ b/moregames.html
@@ -69,6 +69,12 @@
             <h2>Duck Life 4</h2>
 			</a>
         </div>
+	    	    	        <div class="grid-item">
+			<a href="./executables/DuckLife4/index.html">
+			<img src="https://m.media-amazon.com/images/I/61ZcnEuWYrL.jpg" alt="SM64" width="200"  height="200">
+            <h2>Super Mario 64</h2>
+			</a>
+        </div>
     </div>
 </div>
 
