--- a/moregames.html
+++ b/moregames.html
@@ -70,7 +70,7 @@
 			</a>
         </div>
 	    	    	        <div class="grid-item">
-			<a href="./executables/DuckLife4/index.html">
+			<a href="./executables/SM64.html">
 			<img src="https://m.media-amazon.com/images/I/61ZcnEuWYrL.jpg" alt="SM64" width="200"  height="200">
             <h2>Super Mario 64</h2>
 			</a>
