--- a/moregames.html
+++ b/moregames.html
@@ -74,6 +74,12 @@
 			<img src="https://m.media-amazon.com/images/I/61ZcnEuWYrL.jpg" alt="SM64" width="200"  height="200">
             <h2>Super Mario 64</h2>
 			</a>
+	<div class="grid-item">
+			<a href="./executables/SSCL.html">
+			<img src="https://bonbang.github.io/img/soccer-skills-champions-league.png" alt="SSCL" width="200"  height="200">
+            <h2>Super Mario 64</h2>
+			</a>
+        </div>
         </div>
     </div>
 </div>
