--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
             <h2>Getting Over It (Scratch)</h2>
 			</a>
         </div>
+	    	<div class="grid-item">
+			<a href="./executables/SSCL.html">
+			<img src="https://bonbang.github.io/img/soccer-skills-champions-league.png" alt="SSCL" width="200"  height="200">
+            <h2>Soccer Skills Champions League</h2>
+			</a>
+        </div>
     </div>
 </div>
 
