--- a/updates.html
+++ b/updates.html
@@ -31,7 +31,7 @@
 <ul>
     <li>New game: Duck Life 4</li>
      <li>New game: Super Mario 64</li>
-      <li>New game: Soccer Skills Champions Leagueli>
+      <li>New game: Soccer Skills Champions Leagueli </li>
 </ul>
 <p> If you want me to add a game or a game doesn't seem to work for any reason (for example the game is blocked), pls submit the problem or game on the following form:</p>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdYdBzR_2Uviodp6t4J-Wh6w0av1xEM-F6IYjRBO8qbYoHm3g/viewform?vc=0&c=0&w=1&flr=0">
