--- a/updates.html
+++ b/updates.html
@@ -30,7 +30,7 @@
 <p> As of this week, here is what has been changed:</p>
 <ul>
     <li>New game: Duck Life 4</li>
-     <li>New game: Super Mario 64</li>
+     <li>New game: Super Mario 64 (note for the controls, use the keys: x c z)</li>
       <li>New game: Soccer Skills Champions League </li>
 </ul>
 <p> If you want me to add a game or a game doesn't seem to work for any reason (for example the game is blocked), pls submit the problem or game on the following form:</p>
